--- a/sass/components/_section-thumbnail.scss
+++ b/sass/components/_section-thumbnail.scss
@@ -8,6 +8,7 @@
 	position: relative;
 	background-color: colors.$dark--2;
 	display: inline-block;
+	margin-bottom: 3rem;
 
 	img {
 		width: 100%;
